# SmashBrickGame

./: README.md
resources/: highscores.txt
src/: Ball.cpp  Ball.h  Blocks.cpp  Blocks.h  Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  Grid.cpp  Grid.h  Highscores.cpp  Highscores.h  Main.cpp  Menu.cpp  Menu.h  Page.cpp  Page.h  Score.cpp  Score.h  Shooter.cpp  Shooter.h  TextInput.cpp  TextInput.h  fssimplewindow.cpp
