add_library(ball Ball.cpp Ball.h)
add_library(blocks Blocks.cpp Blocks.h)
add_library(button Button.cpp Button.h)
add_library(fssimplewindow fssimplewindow.cpp fssimplewindow.h)
add_library(game Game.cpp Game.h)
add_library(grid Grid.cpp Grid.h)
add_library(highscores Highscores.cpp Highscores.h)
add_library(menu Menu.cpp Menu.h)
add_library(page Page.cpp Page.h)
add_library(score Score.cpp Score.h)
add_library(shooter Shooter.cpp Shooter.h)
add_library(textinput TextInput.cpp TextInput.h)
add_library(ysglfontdata ysglfontdata.c ysglfontdata.h)
add_library(yspng yspng.cpp yspng.h)

add_executable(SmashBrickGame main.cpp)
target_link_libraries(SmashBrickGame ball blocks button fssimplewindow game grid highscores menu page score shooter textinput ysglfontdata yspng)